# Minecraft

./: .gitignore  CMakeLists.txt
include/: Camera.hpp  Chunk.hpp  Shader.hpp  ThreadPool.hpp
shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Chunk.cpp  Shader.cpp  main.cpp
